--- a/package.json
+++ b/package.json
@@ -1,13 +1,34 @@
 {
-"name": "CoffeeNode",
-"version": "0.0.1",
-"private": true,
-  "scripts": {
-    "start": "node app"
+  "name": "NodeCoffee",
+  "description": "Coffee Pot Monioring",
+  "version": "0.1.0",
+  "homepage": "https://github.com/georgeredinger/NodeCoffee",
+  "author": {
+    "name": "George Redinger",
+    "email": "george@georgeredinger.com"
   },
-  "dependencies": {
-     "supervisor": "*",
-     "socket.io": "*"
-   }
- }
-                                
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/georgeredinger/NodeCoffee.git"
+  },
+  "bugs": {
+    "url": "https://github.com/georgeredinger/NodeCoffee/issues"
+  },
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "https://github.com/georgeredinger/NodeCoffee/blob/master/LICENSE-MIT"
+    }
+  ],
+  "main": "lib/NodeCoffee",
+  "engines": {
+    "node": ">= 0.6.0"
+  },
+  "scripts": {
+    "test": "grunt test"
+  },
+  "devDependencies": {
+    "grunt": "~0.3.11"
+  },
+  "keywords": []
+}
